--- a/src/style/english.tex
+++ b/src/style/english.tex
@@ -1,6 +1,6 @@
 \documentclass[10.5pt,a4paper,roman,xelatex]{moderncv}
 
-\usepackage{fontspec,xunicode,xltxtra} 
+\usepackage{fontspec,xunicode,xltxtra, romannum} 
 
 % English font settings
 \defaultfontfeatures{Ligatures=TeX, Numbers={OldStyle}}
