--- a/src/BaojunSu-Resume-English.tex
+++ b/src/BaojunSu-Resume-English.tex
@@ -74,7 +74,7 @@
   \cvitem{Timeline}{2009 -- 2010}
   \cvitem{Results}{Implemented an advanced ensemble algorithm and ensemble 8 machine learning algorithms, can achieve the best results on \emph{All} public datasets, 
   with small memory footprint (default 5~MB) and fast (train/predict hundreds mails in 1 second with 1 thread on normal PC). 
-  It won the first place in large-scale spam filtering competition of Eights Symposium of Search Engine and Web Mining and derivated two research papers.} 
+  It won the first place in large-scale spam filtering competition of Eights Symposium of Search Engine and Web Mining and derived two research papers.} 
 
 \section{Publications}
 \cvlistitem{Congfu Xu, Baojun Su, Yunbiao Cheng, Weike Pan, Li Chen, "An Adaptive Fusion Algorithm for Spam Detection", IEEE Intelligent Systems, vol.29, no. 4, pp. 2-8, July-Aug. 2014, doi:10.1109/MIS.2013.54}
